# BlueKing

./: .gitignore
brain/: AGENTS.md  pyproject.toml
brain/blueking/: __init__.py  base.py  blueking_pb2.py  blueking_pb2.pyi  blueking_pb2_grpc.py  events.py  grpc.py  main.py
brain/blueking/agents/: builder.py
brain/blueking/agents/gestalt/: __init__.py  config.yaml
brain/blueking/agents/turtle_agent/: __init__.py  agent.py  config.yaml
brain/blueking/crews/: __init__.py  turtle_crew.py
brain/blueking/flows/: __init__.py  example_flow.py
brain/blueking/tasks/: __init__.py  builder.py
brain/blueking/tasks/navigate_task/: __init__.py  config.yaml  task.py
brain/blueking/tools/: __init__.py  custom_tool.py
brain/blueking/utils/: config_loader.py  context.py  state_db.py
gestalt/: Cargo.toml  build.rs
gestalt/src/: actions.rs  brain.rs  events.rs  grpc.rs  lib.rs  main.rs  websocket.rs
lua/: blueking.lua  startup.lua
lua/blueking/: client.lua  commands.lua  config.lua  peripherals.lua
proto/: blueking.proto
